Add education section

--- a/resume.html
+++ b/resume.html
@@ -260,7 +260,6 @@ h4 span:first-child {
 
 </div> <br>
 
-
 <div class="row">
 
 	<div class="col-sm-12">
@@ -290,16 +289,72 @@ h4 span:first-child {
 
 </div> <br>
 
+<div class="row">
 
+	<div class="col-sm-12">
+		<h4 class="strike-through">
+			<span>Macy&#39;s</span>
+			<span class="date">
+				Summer 2016 - Fall 2016
+			</span>
+		</h4>
 
+		<div class="position">
+			Software Engineer Intern
+		</div>
+
+		<ul class="highlights">
 			
+				<li class="bullet">
+					do this
+				</li>
+			
+				<li class="bullet">
+					do that
+				</li>
+			
+		</ul>
+	</div>
+
+</div> <br>
+
 
 		</div>
 	</section>
+	
+<section id="education" class="row">
+	<aside class="col-sm-3">
+		<h3>Education</h3>
+	</aside>
+	<div class="col-sm-9">
+		<div class="row">
+
+		<div class="col-sm-12">
+			<h4 class="strike-through">
+				<span>Georgia Institute of Technology</span>
+				<span class="date">
+					May 2019 (expected)
+				</span>
+			</h4>
+
+			<div class="area">
+				Bachelor of Science in Computer Science
+			</div>
+
+			<div class="studyType">
+				GPA: 3.5/4.0
+			</div>
+		</div>
 	</div>
+</section>
+
+
+</div>
 
 	</body>
 </html>
+
+
 
 
 
