--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
 
-	<title>Vinh Tran</title>
+	<title>Daniel Walin, Software Engineer</title>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
@@ -72,7 +72,7 @@
 		font-weight: bold;
 	}
 	.container {
-		max-width: 750px;
+		max-width: 900px;
 		padding: 0 30px;
 	}
 	.col-sm-6 {
