--- a/resume.html
+++ b/resume.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
 
-	<title>Daniel Walin, Software Engineer</title>
+	<title>Vinh Tran</title>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
 
 	<style type="text/css">
 	@import url(
-	http://fonts.googleapis.com/css?family=Lato:400,700
+		https://fonts.googleapis.com/css?family=Roboto
 	);
 	body {
 		background: #fff;
