--- a/resume_template.html
+++ b/resume_template.html
@@ -12,11 +12,11 @@
 
 	<style type="text/css">
 	@import url(
-	http://fonts.googleapis.com/css?family=Lato:400,700
+		https://fonts.googleapis.com/css?family=Roboto
 	);
 	body {
 		background: #fff;
-		font-family: Lato, sans-serif;
+		font-family: Roboto, sans-serif;
 		margin: 0 0 80px;
 	}
 	a {
