--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 	);
 	body {
 		background: #fff;
-		font-family: Lato, sans-serif;
+		font-family: Roboto, sans-serif;
 		margin: 0 0 80px;
 	}
 	a {
@@ -224,6 +224,30 @@
 		
 		<div id="content" class="container">
 			
+		<section id="education" class="row">
+			<aside class="col-sm-3">
+				<h3>Education</h3>
+			</aside>
+			<div class="col-sm-9">
+				<div class="row">
+				<div class="col-sm-12">
+					<h4 class="strike-through">
+						<span>Georgia Institute of Technology</span>
+						<span class="date">
+							May 2019 (expected)
+						</span>
+					</h4>
+					<div class="area">
+						Bachelor of Science in Computer Science
+					</div>
+					<div class="studyType">
+						GPA: 3.5/4.0
+					</div>
+				</div>
+			</div>
+		</section>
+		
+			
 			<section id="work" class="row">
 				<aside class="col-sm-3">
 					<h3>Work</h3>
@@ -349,30 +373,6 @@
 				</div>
 			</section>
 			
-			
-		<section id="education" class="row">
-			<aside class="col-sm-3">
-				<h3>Education</h3>
-			</aside>
-			<div class="col-sm-9">
-				<div class="row">
-				<div class="col-sm-12">
-					<h4 class="strike-through">
-						<span>Georgia Institute of Technology</span>
-						<span class="date">
-							May 2019 (expected)
-						</span>
-					</h4>
-					<div class="area">
-						Bachelor of Science in Computer Science
-					</div>
-					<div class="studyType">
-						GPA: 3.5/4.0
-					</div>
-				</div>
-			</div>
-		</section>
-		
 		</div>
 		
 	</body>
