--- a/resume_template.html
+++ b/resume_template.html
@@ -7,12 +7,15 @@
 
 	<title>Vinh Tran</title>
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
 
 	<style type="text/css">
 	@import url(
 		https://fonts.googleapis.com/css?family=Roboto
+	);
+	@import url(
+		https://fonts.googleapis.com/css?family=Titillium+Web:200
 	);
 	body {
 		background: #fff;
@@ -20,11 +23,11 @@
 		margin: 0 0 80px;
 	}
 	a {
-		color: #2ecc71;
+		color: #fff;
 	}
 	a:focus,
 	a:hover {
-		color: #f1c40f;
+		color: #2ecc71;
 		text-decoration: none;
 	}
 	p {
@@ -85,17 +88,25 @@
 		margin-top: 30px;
 	}
 	#header {
-		background: #f4f6f6;
+		background: #0b0d72;
 		padding: 10px;
 		margin-bottom: 0px;
+		color: #fff;
+		letter-spacing: 2px;
+		min-width: 600px;
 	}
 	#header h2 {
-		color: #95a5a6;
-		font-size: 24px;
+		color: #fff;
+		font-size: 35px;
+		font-family: 'Titillium Web', sans-serif;
+		letter-spacing: 4px;
+	}
+	#header .col-sm-4 {
+		text-align: right;
 	}
 	#content h3 {
-		color: #f1c40f;
-		font-size: 24px;
+		color: #000000;
+		font-size: 28px;
 		margin-top: -4px;
 	}
 	#content aside {
@@ -201,11 +212,9 @@
 		<header id="header">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-4">
-						{{.Location}}
-							<br>
-						<a href="https://github.com/{{.Github}}">Github</a> |
-						<a href="https://www.linkedin.com/in/{{.LinkedIn}}">LinkedIn</a>
+					<div class="col-sm-3">
+
+
 					</div>
 
 					<div class="col-sm-5">
@@ -218,9 +227,17 @@
 						</h4>
 					</div>
 
-					<div class="col-sm-3">
-						<a href="mailto:{{.Email}}">{{.Email}}</a> <br>
-						{{.Phone}}
+					<div class="col-sm-4">
+						<a href="mailto:{{.Email}}">{{.Email}}</a>
+						<br>
+						<span>{{.Phone}}</span>
+						<br>
+						<span>{{.Location}}</span>
+						<br>
+						<a href="https://github.com/{{.Github}}">Github</a>
+						|
+						<a href="https://www.linkedin.com/in/{{.LinkedIn}}"> LinkedIn</a>
+						<br>
 					</div>
 				</div>
 			</div>
