--- a/resume_template.html
+++ b/resume_template.html
@@ -101,9 +101,7 @@
 		font-family: 'Titillium Web', sans-serif;
 		letter-spacing: 4px;
 	}
-	#header .col-sm-4 {
-		text-align: right;
-	}
+
 	#content h3 {
 		color: #000000;
 		font-size: 28px;
@@ -139,6 +137,8 @@
 		content: attr(href);
 	}
 
+
+
 	@media (min-width: 480px) {
 		.strike-through {
 			border-top: 1px solid #f4f6f6;
@@ -161,6 +161,12 @@
 			margin-top: -10px;
 			padding-left: 20px;
 			right: 0;
+		}
+
+	}
+	@media (min-width: 768px) {
+		#header .col-sm-4 {
+		text-align: right;
 		}
 	}
 	@media (max-width: 768px) {
